WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196466
Attr nodes are not cloned properly
https://bugs.webkit.org/show_bug.cgi?id=196466
Summary
Attr nodes are not cloned properly
Chris Dumez
Reported
2019-04-01 15:09:45 PDT
Attr nodes are not cloned properly according to: -
https://dom.spec.whatwg.org/#concept-node-clone
A cloned Attr node should retain its prefix and namespace. Both Gecko and Blink agree with the DOM specification here.
Attachments
Patch
(3.49 KB, patch)
2019-04-01 15:11 PDT
,
Chris Dumez
rniwa
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-04-01 15:11:57 PDT
Created
attachment 366428
[details]
Patch
Ryosuke Niwa
Comment 2
2019-04-01 18:52:03 PDT
Comment on
attachment 366428
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=366428&action=review
> Source/WebCore/dom/Document.cpp:992 > // FIXME: This will "Attr::normalize" child nodes of Attr.
Should we remove this FIXME?
Chris Dumez
Comment 3
2019-04-01 19:40:35 PDT
Comment on
attachment 366428
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=366428&action=review
>> Source/WebCore/dom/Document.cpp:992 >> // FIXME: This will "Attr::normalize" child nodes of Attr. > > Should we remove this FIXME?
Is it not valid anymore?
Ryosuke Niwa
Comment 4
2019-04-01 19:47:17 PDT
(In reply to Chris Dumez from
comment #3
)
> Comment on
attachment 366428
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=366428&action=review
> > >> Source/WebCore/dom/Document.cpp:992 > >> // FIXME: This will "Attr::normalize" child nodes of Attr. > > > > Should we remove this FIXME? > > Is it not valid anymore?
There is no Attr::normalize anymore. This is about normalizing the text child nodes of Attr when we supported multiple child nodes for Attr:
https://dom.spec.whatwg.org/#dom-node-normalize
But that's totally irrelevant now since Attr isn't even a ContainerNode now.
Chris Dumez
Comment 5
2019-04-01 20:14:56 PDT
Committed
r243734
: <
https://trac.webkit.org/changeset/243734
>
Radar WebKit Bug Importer
Comment 6
2019-04-01 20:15:18 PDT
<
rdar://problem/49506786
>
Chris Dumez
Comment 7
2019-04-01 20:15:31 PDT
(In reply to Ryosuke Niwa from
comment #4
)
> (In reply to Chris Dumez from
comment #3
) > > Comment on
attachment 366428
[details]
> > Patch > > > > View in context: > >
https://bugs.webkit.org/attachment.cgi?id=366428&action=review
> > > > >> Source/WebCore/dom/Document.cpp:992 > > >> // FIXME: This will "Attr::normalize" child nodes of Attr. > > > > > > Should we remove this FIXME? > > > > Is it not valid anymore? > > There is no Attr::normalize anymore. This is about normalizing the text > child nodes of Attr when we supported multiple child nodes for Attr: >
https://dom.spec.whatwg.org/#dom-node-normalize
> > But that's totally irrelevant now since Attr isn't even a ContainerNode now.
Oh right. Fixed before landing, thanks.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug