Attr nodes are not cloned properly https://bugs.webkit.org/show_bug.cgi?id=196466

Reviewed by Ryosuke Niwa.

LayoutTests/imported/w3c:

Rebaseline WPT test now that one more check is passing.

* web-platform-tests/dom/nodes/Document-importNode-expected.txt:

Source/WebCore:

Attr nodes are not cloned properly according to:
- https://dom.spec.whatwg.org/#concept-node-clone

A cloned Attr node should retain its prefix and namespace.

Both Gecko and Blink agree with the DOM specification here.

No new tests, rebaselined existing test.

* dom/Document.cpp:
(WebCore::Document::importNode):

Canonical link: https://commits.webkit.org/210746@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243734 268f45cc-cd09-0410-ab3c-d52691b4dbfc